@@ -241,10 +241,15 @@ autoscript($package, $scriptname, $snippetname, $substparam)
 	 - binary package to be affected
 	 - script to add to
 	 - filename of snippet. For testing purposes, you can set the
-	   environment variable DH_AUTOSCRIPTDIR to a directory contaning
-	   the snippets, which can be used to shadow the snippets provided
+	   environment variable DH_DATAFILES containing a autoscripts
+	   directory, which can be used to shadow the snippets provided
 	   in /usr/share/debhelper/autoscripts (or to test newly added
 	   snippets).
+	   Older versions of debhelper (<< 13.1~) does not support
+	   DH_DATAFILES.  If you need to support debhelper (<< 13.1~)
+	   then you can set DH_AUTOSCRIPTDIR to a directory containing
+	   the snippets instead (note it should point to the autoscripts
+	   directory unlike DH_DATAFILES).
 	 - (optional) A substitution parameter, which is one of 3 times:
 	   * sed commands to run on the snippet. E.g. s/#PACKAGE#/$PACKAGE/
 	     Note: Passed to the shell inside double quotes.
