@@ -11,7 +11,7 @@ export PERL5LIB=$(pwd)/lib
 
 # If any automatic script generation is done in building this package, 
 # be sure to use the new templates from this package.
-export DH_AUTOSCRIPTDIR=$(pwd)/autoscripts
+export DH_DATAFILES=$(pwd)
 
 prog=$1
 shift 1
