@@ -25,7 +25,7 @@ use lib "$ROOT_DIR/lib";
 $ENV{PATH} = "$ROOT_DIR:$ENV{PATH}" if $ENV{PATH} !~ m{\Q$ROOT_DIR\E/?:};
 $ENV{PERL5LIB} = join(':', "${ROOT_DIR}/lib", (grep { defined } $ENV{PERL5LIB}))
     if not $ENV{PERL5LIB} or $ENV{PERL5LIB} !~ m{\Q$ROOT_DIR\E(?:/lib)?/?:};
-$ENV{DH_AUTOSCRIPTDIR} = "$ROOT_DIR/autoscripts";
+$ENV{DH_DATAFILES} = $ROOT_DIR;
 # Nothing in the tests requires root.
 $ENV{DEB_RULES_REQUIRES_ROOT} = 'no';
 # Disable colors for good measure
